# Easyserve

./: .dockerignore  .gitignore  BLUEPRINT.md  BUILD_FRAMEWORK.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_pin_hash.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  alert.py  exit_pass.py  feedback.py  menu_category.py  menu_item.py  order.py  order_item.py  payment.py  promo.py  table.py  user.py  venue.py
backend/app/routers/: alerts.py  analytics.py  auth.py  customer.py  exit_pass.py  menu.py  orders.py  payments.py  promos.py  staff.py  tables.py  venues.py  websocket.py
backend/app/schemas/: alert.py  analytics.py  auth.py  exit_pass.py  feedback.py  menu.py  order.py  payment.py  table.py  venue.py
backend/app/services/: alert_service.py  analytics_service.py  auth_service.py  exit_pass_service.py  order_service.py  payment_service.py  promo_service.py  routing_service.py  ws_manager.py
backend/app/utils/: helpers.py  security.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/bar/: page.tsx
frontend/src/app/cashier/: page.tsx
frontend/src/components/: AuthGuard.tsx  EsLogo.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: auth.ts  order.ts
(+18 files in other folders)
