[project]
name = "easyserve-backend"
version = "0.1.0"
description = "EasyServe Hospitality OS — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
    "redis==5.0.4",
    "qrcode[pil]==7.4.2",
    "Pillow==10.3.0",
    "supabase==2.4.5",
    "python-dotenv==1.0.1",
    "email-validator==2.1.1",
    "APScheduler==3.10.4",
    "pytz==2024.1",
    "slowapi==0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
